syntax = "proto3";

package lattice.network;

import "storage.proto";
import "weaver.proto";

// 1. Join Protocol
message JoinRequest {
  bytes node_pubkey = 1;  // Joining node's public key (32 bytes)
  bytes store_id = 2;     // Store UUID to join (16 bytes, MANDATORY)
  bytes invite_secret = 3;  // Secret from invite token (MANDATORY)
}

message InviteToken {
    bytes store_id = 1;
    bytes secret = 2;
    bytes inviter_pubkey = 3;
}

message JoinResponse {
  bytes inviter_pubkey = 1;  // Inviter's public key for verification
  bytes store_id = 2;       // Root store UUID (16 bytes) for new node to create
  repeated bytes authorized_authors = 3;  // All known author pubkeys (for bootstrap sync)
}

// 2. Peer Message Wrapper (unicast RPC)
message PeerMessage {
  oneof message {
    JoinRequest join_request = 1;
    JoinResponse join_response = 2;
    StatusRequest status_request = 3;
    StatusResponse status_response = 4;
    FetchIntentions fetch_intentions = 5;
    IntentionResponse intention_response = 6;
  }
}

// 3. Status Protocol — exchange author tips (PubKey → latest intention Hash)
message AuthorTip {
  bytes author_id = 1;  // Ed25519 public key (32 bytes)
  bytes tip_hash = 2;   // Hash of latest intention from this author (32 bytes)
}

message StatusRequest {
  bytes store_id = 1;                  // Store UUID (16 bytes)
  repeated AuthorTip author_tips = 2;  // Sender's current author tips
}

message StatusResponse {
  bytes store_id = 1;                  // Store UUID (16 bytes)
  repeated AuthorTip author_tips = 2;  // Responder's current author tips
}

// 4. Fetch Protocol — request intentions by content hash
message FetchIntentions {
  bytes store_id = 1;              // Store UUID (16 bytes)
  repeated bytes hashes = 2;      // Intention content hashes to fetch (32 bytes each)
}

message IntentionResponse {
  bytes store_id = 1;                                       // Store UUID (16 bytes)
  bool done = 2;                                            // true = last chunk
  repeated lattice.weaver.SignedIntention intentions = 3;   // Chunk of signed intentions
}

// 5. Gossip Protocol
message GossipMessage {
  optional lattice.weaver.SignedIntention intention = 1;  // Intention broadcast (if any)
  repeated AuthorTip sender_tips = 2;                     // Sender's author tips (piggybacked)
}
